sobre quase pronto

--- a/index.html
+++ b/index.html
@@ -7,11 +7,49 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 </head>
-<body>
-    <section>
-        <div class="main-content"></div>
+<body class="main-bg">
+    <aside class="menu white-bg">
+        <nav class= "main-content menu-content">
+            <h3><a href="#">Logo</a></h3>
+            <ul>
+                <li>
+                  <a href="#sobre">Sobre</a>
+                </li>
+                <li>
+                  <a href="#serviços">Serviços</a>
+                </li>
+                <li>
+                  <a href="#highlights">Locações</a>
+                </li>
+                <li>
+                  <a href="#pricing">Contatos</a>
+                </li>
+              </ul>
+        </nav>
+    </aside>
+    <div id="sobre" class="menu-spacing"></div>
+    <section  class="sobre main-bg section">
+      <div class="sobre-content main-content">
+        <div class="sobre-text-content">
+      <h3> aumente produção da sua Obra com a A Ver's Perfuratriz e Locações</h3>
+      <p>Locação de equipamentos para área da construção civil, e prestação de serviços, garanta mais agilidade na sua obra!</p>
+        </div>
+        <div class="sobre-img"> <img src="../Ver-s/assets/images/5 imagens.svg" alt="as 5 imagens dos serviços ofertados pela Vers"></div>
+      </div>
     </section>
+    
+    <section class="white-bg section">
+
+<div>
+  <h2>Serviços</h2>
+  <p></p>
+</div>
+
+
+    </section>
+
+    
 </body>
 </html>
