--- a/index.html
+++ b/index.html
@@ -36,15 +36,21 @@
       <h3> aumente produção da sua Obra com a A Ver's Perfuratriz e Locações</h3>
       <p>Locação de equipamentos para área da construção civil, e prestação de serviços, garanta mais agilidade na sua obra!</p>
         </div>
-        <div class="sobre-img"> <img src="../Ver-s/assets/images/5 imagens.svg" alt="as 5 imagens dos serviços ofertados pela Vers"></div>
+        <div class="sobre-img"><img src="../Ver-s/assets/images/5%20imagens.svg" alt="as 5 imagens dos serviços ofertados pela Vers"></div>
       </div>
     </section>
     
-    <section class="white-bg section">
+    <section id="serviços" class="white-bg section">
 
-<div>
+<div class="main-content servicos-content">
   <h2>Serviços</h2>
-  <p></p>
+  <h3>Perfuratriz: Transformando Construções com Eficiência e Precisão</h3>
+  <p>Descubra a poderosa Perfuratriz, uma ferramenta essencial para profissionais da construção civil. Com sua capacidade de perfurar paredes, lajes e pisos de concreto com rapidez e precisão, a Perfuratriz eleva o padrão de eficiência em qualquer projeto. Imagine reduzir semanas ou até meses de trabalho em apenas dias, graças ao desempenho superior desta ferramenta.</p>
+<p>Nossos profissionais são especializados no manuseio da Perfuratriz, garantindo não apenas resultados rápidos, mas também seguros e econômicos. Com a Ver's, você tem a certeza de contar com equipamentos de alta qualidade e uma equipe preparada para enfrentar os desafios do seu projeto.</p>
+  <h3>Locações de Ferramentas: Potencializando seu Canteiro de Obras</h3>
+  <p>A Ver's oferece não apenas a Perfuratriz, mas também uma ampla gama de ferramentas essenciais para o seu canteiro de obras. Desde marteletes e cortadoras de concreto até betoneiras e muito mais, nossas opções de locação são projetadas para otimizar cada etapa do seu projeto.</p>
+<p>Nossas ferramentas são mantidas em perfeitas condições, prontas para serem utilizadas imediatamente. Oferecemos flexibilidade e suporte para garantir que você tenha exatamente o que precisa, quando e onde precisar.</p>
+<p>Quer saber mais sobre como podemos ajudar a transformar seu projeto de construção? Entre em contato conosco hoje mesmo e descubra como a Ver's pode ser sua parceira ideal no sucesso do seu empreendimento.</p>
 </div>
 
 
