toques finais em contato

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
   <section id="Missão" class="white-bg section">
 
-    <div class="main-content servicos-content">>
+    <div class="main-content servicos-content">
       <h3>Perfuratriz: Transformando Construções com Eficiência e Precisão</h3>
       <p>Descubra a poderosa Perfuratriz, uma ferramenta essencial para profissionais da construção civil. Com sua
         capacidade de perfurar paredes, lajes e pisos de concreto com rapidez e precisão, a Perfuratriz eleva o padrão
@@ -68,44 +68,44 @@
         hoje mesmo e descubra como a Ver's pode ser sua parceira ideal no sucesso do seu empreendimento.</p>
     </div>
   </section>
+<section id="contatos" class="main-bg section">
+<div class="main-content contatos-content">
+  <div class="contatos-img">
+    <img src="../Ver-s/assets/images/negocios.svg" alt="Imagem de ilustração de call">
+  </div>
+  <div class="form">
+    <fieldset class="form-grid">
 
-  <section id="contatos" class="main-bg section">
-    <div class="contatos-content section">
-      <div class="contatos-img">
-        <img src="../Ver-s/assets/images/negocios.svg" alt="Imagem de ilustração de call">
+      <div class="form-group">
+        <label for="Primeiro-nome">Nome</label>
+        <input type="text" name="Primeiro-nome" id="Primeiro-nome" placeholder="Seu Nome">
       </div>
-      <div class="form">
-        <fieldset class="form-grid">
-
-          <div class="form-group">
-            <label for="Primeiro-nome">Nome</label>
-            <input type="text" name="Primeiro-nome" id="Primeiro-nome" placeholder="Seu Nome">
-          </div>
-          <div class="form-group">
-            <label for="sobrenome">Sobrenome</label>
-            <input type="text" name="Sobrenome" id="sobrenome" placeholder="Seu Sobrenome">
-          </div>
-          <div class="form-group">
-            <label for="email">E-Mail</label>
-            <input type="text" name="email" id="email" placeholder="Seu E-mail">
-          </div>
-          <div class="form-group full-area">
-            <label for="mensagem">Mensagem</label>
-            <textarea name="mensagem" id="mensagem" placeholder="Sua Mensagem"></textarea>
-            <div>
-              <button class="" type="submit">Enviar Mensagem</button>
-            </div>
-            <div class="numeros-content">
-              <h4 class="numeros">Contatos</h4>
-              <p>Edir      <a href="https://api.whatsapp.com/send?phone=5531971981844&text=Ol%C3%A1!%20Vim%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es">(31) 97198-1844<img src="../Ver-s/assets/images/wpp-icon.svg" alt="icone do wpp"></a></p> 
-              <p>Vanderson <a href="https://api.whatsapp.com/send?phone=5531971482373&text=Ol%C3%A1!%20Vim%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es">(31) 971482373<img src="../Ver-s/assets/images/wpp-icon.svg" alt="icone do wpp"></a></p>
-            </div>
-          </div>
-        </fieldset>
+      <div class="form-group">
+        <label for="sobrenome">Sobrenome</label>
+        <input type="text" name="Sobrenome" id="sobrenome" placeholder="Seu Sobrenome">
       </div>
-      <div>
-  </section>
+      <div class="form-group">
+        <label for="email">E-Mail</label>
+        <input type="text" name="email" id="email" placeholder="Seu E-mail">
+      </div>
+      <div class="form-group full-area">
+        <label for="mensagem">Mensagem</label>
+        <textarea name="mensagem" id="mensagem" placeholder="Sua Mensagem"></textarea>
+        <div>
+          <button class="" type="submit">Enviar Mensagem</button>
+        </div>
+      </fieldset>
+        <h5>Contatos</h5>
+        <div class= "numeros-alling" >
+          <p class="numeros-content n2"><a href="https://api.whatsapp.com/send?phone=553125220030&text=Ol%C3%A1!%20Vim%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es">Orçamentos (31) 2522-0030<img src="../Ver-s/assets/images/wpp-icon.svg"alt="icone do wpp"></a></p>
+              <p class="numeros-content n1"><a href="https://api.whatsapp.com/send?phone=5531971981844&text=Ol%C3%A1!%20Vim%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es">Edir (31) 97198-1844<img src="../Ver-s/assets/images/wpp-icon.svg" alt="icone do wpp"></a></p> 
+              <p class="numeros-content n4"><a href="versperfuratrizelocacoes@gmail.com">versperfuratrizelocacoes@gmail.com<img src="../Ver-s/assets/images/email.svg"alt="icone do email"></a></p>
+              <p class="numeros-content n3"><a href="https://api.whatsapp.com/send?phone=5531971482373&text=Ol%C3%A1!%20Vim%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es">Vanderson (31) 97148-2373<img src="../Ver-s/assets/images/wpp-icon.svg"alt="icone do wpp"></a></p>
+            
+        </div>
+</div>
 
+</section>
 
 
 
