pagina de contatos ok e responsiva

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a href="#contatos">Contatos</a>
         </li>
         <li>
-          <a href="#localização">Localização</a>
+          <a href="#local">Localização</a>
         </li>
 
       </ul>
@@ -42,7 +42,7 @@
         <p>Locação de equipamentos para área da construção civil, e prestação de serviços, garanta mais agilidade na sua
           obra!</p>
       </div>
-      <div class="sobre-img"><img src="../Ver-s/assets/images/5%20imagens.svg"
+      <div class="sobre-img"><img src="../Ver-s/assets/images/obra-na-cidade.svg"
           alt="as 5 imagens dos serviços ofertados pela Vers"></div>
     </div>
   </section>
@@ -117,10 +117,17 @@
       </div>
 
   </section>
+  <section id="local" class="white-bg section ">
+    <h3  class="localizacao">Localização</h3>
+    <div id="Localização" class="mapa section"> 
+    <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30029.69320030366!2d-44.01465506523437!3d-19.809819500000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa68e24dc1007ed%3A0xd1020e819aa170ed!2sR.%20Eng.%20Te%C3%B3filo%20Ribeiro%2C%202%20-%20Piratininga%2C%20Belo%20Horizonte%20-%20MG%2C%2031573-350!5e0!3m2!1spt-BR!2sbr!4v1720192097982!5m2!1spt-BR!2sbr" width="600" height="308" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+  <p>Estamos Localizados no coração da Cidade</p>
+  </section>
 
 
 
-
+<footer class="main-bg footer">Site desenvolvido por <a rel="nofollow" target="_blank" href="https://www.linkedin.com/in/rafael-xavier-rezende-a62974207/">Rafael Xavier Rezende</a></footer>
 </body>
 
 </html>
