--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <aside class="menu white-bg">
     <nav class="main-content menu-content">
       <h3><a href="logo">Logo</a></h3>
+      <p class="numeros-content n6"><a
+        href="https://api.whatsapp.com/send?phone=553125220030&text=Ol%C3%A1!%20Vim%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es">Orçamentos
+        (31) 2522-0030<img src="../Ver-s/assets/images/wpp-icon.svg" alt="icone do wpp"></a></p>
       <ul onclick="getElementById('close-menu').checked = false;">
         <li>
           <a href="#intro">Sobre</a>
@@ -97,7 +100,7 @@
               <button class="" type="submit">Enviar Mensagem</button>
             </div>
         </fieldset>
-        <h5>Contatos</h5>
+        <h5 class="numeros-alling">Contatos</h5>
         <div class="numeros-alling">
           <p class="numeros-content n2"><a
               href="https://api.whatsapp.com/send?phone=553125220030&text=Ol%C3%A1!%20Vim%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es">Orçamentos
@@ -119,12 +122,15 @@
       </div>
 
   </section>
-  <section id="local" class="white-bg section ">
+  <section id="local" class="white-bg section">
+    <div>
     <h3  class="localizacao">Localização</h3>
     <div id="Localização" class="mapa section"> 
     <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30029.69320030366!2d-44.01465506523437!3d-19.809819500000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa68e24dc1007ed%3A0xd1020e819aa170ed!2sR.%20Eng.%20Te%C3%B3filo%20Ribeiro%2C%202%20-%20Piratininga%2C%20Belo%20Horizonte%20-%20MG%2C%2031573-350!5e0!3m2!1spt-BR!2sbr!4v1720192097982!5m2!1spt-BR!2sbr" width="600" height="308" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
+  <div class="endereço">
   <p>Estamos Localizados no coração da Cidade</p>
+  </div>
   </section>
 
 
