--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
     <div>
     <h3  class="localizacao">Localização</h3>
     <div id="Localização" class="mapa section"> 
-    <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30029.69320030366!2d-44.01465506523437!3d-19.809819500000014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa68e24dc1007ed%3A0xd1020e819aa170ed!2sR.%20Eng.%20Te%C3%B3filo%20Ribeiro%2C%202%20-%20Piratininga%2C%20Belo%20Horizonte%20-%20MG%2C%2031573-350!5e0!3m2!1spt-BR!2sbr!4v1720192097982!5m2!1spt-BR!2sbr" width="600" height="308" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3752.176873218929!2d-43.91811192398458!3d-19.874751936592055!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa69af0a56eb705%3A0xcdfa945130800d5e!2sR.%20Joaquim%20Baeta%20Neves%2C%20231b%20-%20Fern%C3%A3o%20Dias%2C%20Belo%20Horizonte%20-%20MG%2C%2031910-550!5e0!3m2!1spt-BR!2sbr!4v1720375613200!5m2!1spt-BR!2sbr" width="600" height="308" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
   <div class="endereço">
-  <p>Estamos Localizados no coração da Cidade</p>
+  <p>R. Joaquim Baeta Neves, 231b - Fernão Dias, Belo Horizonte - MG, 31910-550</p>
   </div>
   </section>
 
