--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <section id="intro" class="sobre main-bg section">
     <div class="sobre-content main-content">
       <div class="sobre-text-content">
-        <h3>aumente produção da sua Obra com a A Ver's Perfuratriz e Locações</h3>
+        <h3>aumente produção da sua Obra com a Ver's Perfuratriz e Locações</h3>
         <p>Locação de equipamentos para área da construção civil, e prestação de serviços, garanta mais agilidade na sua
           obra!</p>
       </div>
