teste de deploy

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="main-content menu-content">
       <h3><a href="logo">Logo</a></h3>
       <p class="numeros-content n6"><a href="https://api.whatsapp.com/send?phone=553125220030&text=Ol%C3%A1!%20Vim%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es">Orçamentos
-          (31) 2522-0030<img src="../Ver-s/assets/images/wpp-icon.svg" alt="icone do wpp"></a></p>
+          (31) 2522-0030<img src="assets/images/wpp-icon.svg" alt="icone do wpp"></a></p>
       <ul onclick="document.getElementById('close-menu').checked = false;">
         <li>
           <a href="#intro">Sobre</a>
@@ -44,7 +44,7 @@
         <p>Locação de equipamentos para área da construção civil, e prestação de serviços, garanta mais agilidade na sua
           obra!</p>
       </div>
-      <div class="sobre-img"><img src="../Ver-s/assets/images/obra-na-cidade.svg"
+      <div class="sobre-img"><img src="assets/images/obra-na-cidade.svg"
           alt="as 5 imagens dos serviços ofertados pela Vers"></div>
     </div>
   </section>
