--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section id="contatos" class="main-bg section">
     <div class="main-content contatos-content">
       <div class="contatos-img">
-        <img src="../Ver-s/assets/images/negocios.svg" alt="Imagem de ilustração de call">
+        <img src="assets/images/negocios.svg" alt="Imagem de ilustração de call">
       </div>
       <div class="form">
         <fieldset class="form-grid">
@@ -101,18 +101,18 @@
         <div class="numeros-alling">
           <p class="numeros-content n2"><a
               href="https://api.whatsapp.com/send?phone=553125220030&text=Ol%C3%A1!%20Vim%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es">Orçamentos
-              (31) 2522-0030<img src="../Ver-s/assets/images/wpp-icon.svg" alt="icone do wpp"></a></p>
+              (31) 2522-0030<img src="assets/images/wpp-icon.svg" alt="icone do wpp"></a></p>
           <p class="numeros-content n4"><a
               href="https://api.whatsapp.com/send?phone=553125220030&text=Ol%C3%A1!%20Vim%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es">@versperfuratrizelocacoes<img
-                src="../Ver-s/assets/images/insta.svg" alt="icone do Instagram"></a></p>
+                src="assets/images/insta.svg" alt="icone do Instagram"></a></p>
           <p class="numeros-content n4"><a href="versperfuratrizelocacoes@gmail.com">versperfuratrizelocacoes@gmail.com<img
-                src="../Ver-s/assets/images/email.svg" alt="icone do email"></a></p>
+                src="assets/images/email.svg" alt="icone do email"></a></p>
           <p class="numeros-content n1"><a
               href="https://api.whatsapp.com/send?phone=5531971981844&text=Ol%C3%A1!%20Vim%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es">Edir
-              (31) 97198-1844<img src="../Ver-s/assets/images/wpp-icon.svg" alt="icone do wpp"></a></p>
+              (31) 97198-1844<img src="assets/images/wpp-icon.svg" alt="icone do wpp"></a></p>
           <p class="numeros-content n3"><a
               href="https://api.whatsapp.com/send?phone=5531971482373&text=Ol%C3%A1!%20Vim%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es">Vanderson
-              (31) 97148-2373<img src="../Ver-s/assets/images/wpp-icon.svg" alt="icone do wpp"></a></p>
+              (31) 97148-2373<img src="assets/images/wpp-icon.svg" alt="icone do wpp"></a></p>
         </div>
       </div>
     </div>
