--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               href="https://api.whatsapp.com/send?phone=553125220030&text=Ol%C3%A1!%20Vim%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es">Orçamentos
               (31) 2522-0030<img src="assets/images/wpp-icon.svg" alt="icone do wpp"></a></p>
           <p class="numeros-content n4"><a
-              href="https://api.whatsapp.com/send?phone=553125220030&text=Ol%C3%A1!%20Vim%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es">@versperfuratrizelocacoes<img
+              href="https://www.instagram.com/versperfuratrizelocacoes/related_profiles/">@versperfuratrizelocacoes<img
                 src="assets/images/insta.svg" alt="icone do Instagram"></a></p>
           <p class="numeros-content n4"><a href="versperfuratrizelocacoes@gmail.com">versperfuratrizelocacoes@gmail.com<img
                 src="assets/images/email.svg" alt="icone do email"></a></p>
