--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <label class="close-menu-label" for="close-menu" title="close menu"></label>
   <aside class="menu white-bg">
     <nav class="main-content menu-content">
-      <h3><a href="logo">Logo</a></h3>
+      <h3><a href="logo"><img src="assets/images/logo.jpeg" alt="logo da empresa"></a></h3>
       <p class="numeros-content n6"><a href="https://api.whatsapp.com/send?phone=553125220030&text=Ol%C3%A1!%20Vim%20do%20site%20e%20gostaria%20de%20mais%20informa%C3%A7%C3%B5es">Orçamentos
           (31) 2522-0030<img src="assets/images/wpp-icon.svg" alt="icone do wpp"></a></p>
       <ul onclick="document.getElementById('close-menu').checked = false;">
