--- a/obg.html
+++ b/obg.html
@@ -16,7 +16,12 @@
         <h1 class="obg-content">Obrigado</h1>
         <p class="obg-content">Em Breve entraremos em contato! ;)</p>
         <div class="back-content">
-        <button class="back">Home</button>
+        <button id="voltar" class="back">Home</button>
+        <script>
+            document.getElementById('voltar').addEventListener('click', function() {
+              window.location.href = 'https://www.versperfuratrizelocacoes.com.br'; 
+            });
+          </script>
         </div>
     </body>
 </body>
