--- a/index.html
+++ b/index.html
@@ -77,31 +77,31 @@
       </div>
       <div class="form">
         <form action="https://api.staticforms.xyz/submit" method="post">
-        <fieldset class="form-grid">
-          <div class="form-group">
-            <label for="Primeiro-nome">Nome</label>
-            <input type="text" name="Primeiro-nome" id="Primeiro-nome" placeholder="Seu Nome">
-          </div>
-          <div class="form-group">
-            <label for="sobrenome">Sobrenome</label>
-            <input type="text" name="Sobrenome" id="sobrenome" placeholder="Seu Sobrenome">
-          </div>
-          <div class="form-group">
-            <label for="email">E-Mail</label>
-            <input type="text" name="email" id="email" placeholder="Seu E-mail">
-          </div>
-          <div class="form-group full-area">
-            <label for="mensagem">Mensagem</label>
-            <textarea type="text" name="mensagem" id="mensagem" placeholder="Sua Mensagem"></textarea>
-          </div>
-          <div>
-            <button type="submit">Enviar Mensagem</button>
-            <input type="hidden" name="accessKey" value="af856e07-eac3-484c-8375-14c3922d2e70">
-            <input type="hidden" name="redirectTo" value="https://www.versperfuratrizelocacoes.com.br/obg.html">
-
-          </div>
-        </fieldset>
-      </form>
+          <fieldset class="form-grid">
+            <div class="form-group">
+              <label for="Primeiro-nome">Nome</label>
+              <input type="text" name="name" placeholder="Digite seu nome completo">
+            </div>
+            <div class="form-group">
+              <label for="phone">Telefone</label>
+              <input type="text" name="phone" placeholder="Seu Telefone">
+            </div>
+            <div class="form-group">
+              <label for="email">E-Mail</label>
+              <input type="text" name="email" placeholder="Seu E-mail">
+            </div>
+            <div class="form-group full-area">
+              <label for="mensagem">Mensagem</label>
+              <textarea name="message" placeholder="Sua Mensagem"></textarea>
+            </div>
+            <div>
+              <button type="submit">Enviar Mensagem</button>
+              <input type="hidden" name="accessKey" value="af856e07-eac3-484c-8375-14c3922d2e70">
+              <input type="hidden" name="redirectTo" value="https://www.versperfuratrizelocacoes.com.br/obg.html">
+            </div>
+          </fieldset>
+        </form>
+        
         <h5 class="numeros-alling">Contatos</h5>
         <div class="numeros-alling">
           <p class="numeros-content n2"><a
